# egobox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Cargo.toml.linux  Dockerfile  README.md  TODO.md  dist-workspace.toml  docker-compose.yml  msys_kriging_env.sh  openssl.pc  pyproject.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  gpqa-release.yml  lint.yml  publish.yml  pytest.yml  python.yml  release.yml  rust.yml  test.yml
benches/: lhs.rs
crates/doe/: Cargo.toml
crates/doe/benches/: lhs.rs  lhs_classics.rs
crates/doe/examples/: samplings.rs
crates/doe/src/: full_factorial.rs  lhs.rs  lib.rs  random.rs  utils.rs
crates/ego/: Cargo.toml  README.md
crates/ego/benches/: ego.rs
crates/ego/examples/: ackley.rs  g24.rs  g24_suggest.rs  michalewicz.rs  mopta08.rs  rosenbrock.rs  rosenbrock100d.rs  rosenbrock_hidim.rs  rosenbrock_highdim.rs  xsinx.rs
crates/ego/src/: egor.rs  errors.rs  lib.rs  types.rs
crates/ego/src/criteria/: ei.rs  mod.rs  wb2.rs
crates/ego/src/gpmix/: mixint.rs  mod.rs  spec.rs
crates/ego/src/optimizers/: lhs_optimizer.rs  mod.rs  optimizer.rs
crates/ego/src/optimizers/gbnm/: internal.rs  mod.rs
crates/ego/src/solver/: coego.rs  egor_config.rs  egor_impl.rs  egor_service.rs  egor_solver.rs  egor_state.rs  mod.rs  solver_computations.rs  solver_impl.rs  solver_infill_optim.rs  trego.rs
crates/ego/src/utils/: bounds.rs  cstr_pof.rs  find_result.rs  gp_recorder.rs  hot_start.rs  logei_helper.rs  misc.rs  mod.rs  portfolio.rs  run_recorder.rs  sort_axis.rs  start_points.rs
crates/gp/: Cargo.toml  README.md
crates/gp/benches/: corr.rs  correlation_models.rs  gp.rs
crates/gp/examples/: kriging.rs  kriging_xsinx.rs
crates/gp/src/: algorithm.rs  correlation_models.rs  errors.rs  lib.rs  mean_models.rs  metrics.rs  optimization.rs  parameters.rs  sparse_algorithm.rs  sparse_parameters.rs  utils.rs
crates/gpqa/: CHANGELOG.md  Cargo.toml  README.md
crates/gpqa/src/: main.rs
crates/moe/: Cargo.toml
crates/moe/benches/: bench_find_nb_clusters.rs
crates/moe/examples/: clustering.rs  moe_norm1.rs  norm1.rs
crates/moe/src/: algorithm.rs  clustering.rs  errors.rs  expertise_macros.rs  gaussian_mixture.rs  lib.rs  metrics.rs  parameters.rs  surrogates.rs  types.rs
doc/: Egor_Tutorial.ipynb  Gpx_MaunaLoaCO2.ipynb  Gpx_Tutorial.ipynb  README.md  SparseGpx_Tutorial.ipynb  TutorialEgor.ipynb
doe/: Cargo.toml  README.md
doe/benches/: lhs.rs  lhs_classic.rs  lhs_classics.rs
doe/examples/: samplings.rs
doe/src/: full_factorial.rs  lhs.rs  lib.rs  random.rs  traits.rs  utils.rs
ego/: Cargo.toml  README.md
ego/benches/: ego.rs
ego/examples/: ackley.rs  g24.rs  mopta08.rs  rosenbrock.rs
ego/src/: ego.rs  egor.rs  egor_config.rs  egor_service.rs  egor_solver.rs  egor_state.rs  errors.rs  lhs_optimizer.rs  lib.rs  mixint.rs  mixintegor.rs  optimizer.rs  sego.rs  sort_axis.rs  types.rs  utils.rs
ego/src/criteria/: ei.rs  mod.rs  wb2.rs
ego/src/gpmix/: mixint.rs  mod.rs
ego/src/optimizers/: lhs_optimizer.rs  mod.rs  optimizer.rs
ego/src/solver/: egor_config.rs  egor_impl.rs  egor_service.rs  egor_solver.rs  egor_state.rs  mod.rs  solver_impl.rs  trego.rs
ego/src/utils/: find_result.rs  hot_start.rs  mod.rs
egobox-doe/: Cargo.toml
egobox-doe/benches/: lhs.rs
egobox-doe/src/: full_factorial.rs  lhs.rs  lib.rs  random.rs
egobox-ego/: Cargo.toml
egobox-ego/src/: egor.rs  errors.rs  lib.rs  mixint.rs  mixintegor.rs  sort_axis.rs  types.rs  utils.rs
egobox-gp/: Cargo.toml
egobox-gp/src/: algorithm.rs  errors.rs  lib.rs  mean_models.rs  parameters.rs  utils.rs
egobox-moe/: Cargo.toml
egobox-moe/src/: algorithm.rs  errors.rs  expertise_macros.rs  lib.rs  parameters.rs  surrogates.rs
egor-doe/: Cargo.toml
egor-doe/benches/: lhs.rs
egor-doe/src/: lhs.rs  lib.rs  traits.rs
egor-ego/: Cargo.toml
egor-ego/src/: egor.rs  errors.rs  lib.rs  mixint.rs  mixintegor.rs  utils.rs
egor-gp/: Cargo.toml
egor-gp/benches/: gp.rs
egor-gp/src/: algorithm.rs  correlation_models.rs  lib.rs
egor-moe/: Cargo.toml
egor-moe/examples/: moe_norm1.rs
egor-moe/src/: algorithm.rs  clustering.rs  errors.rs  lib.rs  (+2 more)
gaussian_process/: Cargo.toml
gaussian_process/src/: algorithm.rs  errors.rs  hyperparameters.rs  lib.rs  mean_models.rs
gp/: Cargo.toml  README.md
gp/benches/: gp.rs
gp/examples/: kriging.rs
gp/src/: algorithm.rs  correlation_models.rs  errors.rs  gp_surrogate.rs  hyperparameters.rs  lib.rs  mean_models.rs  metrics.rs  optimization.rs  parameters.rs  sgp_algorithm.rs  sgp_parameters.rs  sparse_algorithm.rs  sparse_parameters.rs  surrogate.rs  surrogates.rs  utils.rs
joss/: paper.bib  paper.md
moe/: Cargo.toml  README.md
moe/benches/: bench_find_nb_clusters.rs
moe/examples/: clustering.rs  moe_norm1.rs  norm1.rs  norm1_D2_200.csv
moe/src/: algorithm.rs  clustering.rs  errors.rs  expert.rs  expertise_macros.rs  gaussian_mixture.rs  gp_algorithm.rs  gp_parameters.rs  hyperparameters.rs  lib.rs  mixture.rs  multivariate_normal.rs  parameters.rs  sgp_algorithm.rs  sgp_parameters.rs  surrogates.rs  types.rs
pls/: Cargo.toml
pls/src/: algorithm.rs  lib.rs
python/: .gitignore  Cargo.toml  README.md  egobox.pyi  pyproject.toml
python/egobox/: __init__.py  egobox.pyi
python/egobox/examples/: iooss_function.py  kriging.py  optim_g24.py  optim_g24_fcstr.py  rastrigin.py  sampling.py
python/egobox/tests/: test_egobox.py  test_egor.py  test_gpmix.py  test_mixintegor.py  test_sampling.py  test_sego.py  test_segomoe_cases.py  test_sgp.py  test_sgpmix.py  test_utils.py
python/egor/: __init__.py
python/egor/tests/: test_egor.py  test_mixintegor.py  test_segomoe_cases.py  test_utils.py
python/src/: domain.rs  egor.rs  gp_config.rs  gp_mix.rs  lib.rs  sampling.rs  sparse_gp_mix.rs  types.rs
src/: ego.rs  egor.rs  errors.rs  gaussian_mixture.rs  gaussian_process.rs  gp_mix.rs  gp_sparse.rs  gpmix.rs  kriging.rs  lhs.rs  lib.rs  main.rs  moe.rs  sampling.rs  sego.rs  sparse_gp_mix.rs  types.rs  utils.rs
(+17 files in other folders)
