[workspace]
members = ["crates/*", "python"]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
version = "0.25.0"
authors = ["Rémi Lafage <remi.lafage@onera.fr>"]
homepage = "https://github.com/relf/egobox"
documentation = "https://pypi.org/project/egobox"
description = "A toolbox for efficient global optimization"
repository = "https://github.com/relf/egobox"
keywords = [
    "machine-learning",
    "doe",
    "gaussian-process",
    "mixture-of-experts",
    "optimization",
]
categories = ["algorithms", "mathematics", "science"]
rust-version = "1.74" # MSVR

exclude = [".github/"]

[workspace.metadata.release]
shared-version = true
tag-name = "{{version}}"
