[workspace]
members = ["crates/*", "python"]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
version = "0.25.0"
authors = ["Rémi Lafage <remi.lafage@onera.fr>"]
homepage = "https://github.com/relf/egobox"
documentation = "https://pypi.org/project/egobox"
description = "A toolbox for efficient global optimization"
repository = "https://github.com/relf/egobox"
keywords = [
    "machine-learning",
    "doe",
    "gaussian-process",
    "mixture-of-experts",
    "optimization",
]
categories = ["algorithms", "mathematics", "science"]
rust-version = "1.74" # MSVR

exclude = [".github/"]

[workspace.metadata.release]
shared-version = true
tag-name = "{{version}}"

[workspace.dependencies]
linfa = { version = "0.7", default-features = false }

ndarray = { version = "0.15", features = ["rayon", "approx"] }
ndarray-rand = "0.14"
ndarray-stats = "0.5"
ndarray-npy = "0.8"

num-traits = "0.2"

thiserror = "1"
anyhow = "1"
rayon = "1"

rand_xoshiro = "0.6"
finitediff = { version = "0.1.4", features = ["ndarray"] }
env_logger = "0.11"
log = "0.4"

serde = "1"
serde_json = "1"

ctrlc = "3.4"

# dev dependencies 
criterion = "0.5"
approx = "0.4"
argmin_testfunctions = "0.2"
