[workspace]
members = ["crates/*", "python"]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
edition = "2024"
version = "0.34.0"
authors = ["Rémi Lafage <remi.lafage@onera.fr>"]
homepage = "https://github.com/relf/egobox"
documentation = "https://pypi.org/project/egobox"
readme = "README.md"
description = "A toolbox for efficient global optimization"
repository = "https://github.com/relf/egobox"
keywords = [
    "machine-learning",
    "doe",
    "gaussian-process",
    "mixture-of-experts",
    "optimization",
]
categories = ["algorithms", "mathematics", "science"]

exclude = [".github/"]

[workspace.metadata.release]
shared-version = true
tag-name = "{{version}}"

[workspace.dependencies]
linfa = { version = "0.8", default-features = false }
linfa-linalg = { version = "0.2", default-features = false }

ndarray = { version = "0.16", features = ["rayon", "approx"] }
ndarray-rand = "0.15"
ndarray-stats = "0.6"
ndarray-npy = "0.9"
statrs = "0.18"

num-traits = "0.2"

thiserror = "2"
anyhow = "1"
rayon = "1"

rand_xoshiro = "0.6"
finitediff = { version = "0.2", features = ["ndarray"] }
env_logger = "0.11"
log = "0.4"

serde = "1"
serde_json = "1"

ctrlc = "3.4"

clap = { version = "4", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }

# dev dependencies 
criterion = "0.7"
approx = "0.5"
argmin_testfunctions = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
