[build-system]
build-backend = "maturin"
requires = ["maturin>=0.12,<0.13", "poetry_core>=1.0.0"]

[project]
name = "egobox"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix"
]

[tool.poetry]
name = "egobox"
version = "0.2.0"
description = "Python binding for egobox EGO optimizer written in Rust"
authors = ["Rémi Lafage <remi.lafage@onera.fr>"]

[tool.poetry.dependencies]
numpy = ">=1.18"
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"