[project]
name = "egobox"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0", "poetry_core>=1.0.0"]

[tool.maturin]
python-source = "python"
# Optional usage of BLAS backend 
# cargo-extra-args = "--features linfa/intel-mkl-static"

[tool.poetry]
name = "egobox"
version = "0.20.0"
description = "Python binding for egobox EGO optimizer written in Rust"
authors = ["Rémi Lafage <remi.lafage@onera.fr>"]
packages = [{ include = "egobox", from = "python" }]

[tool.poetry.dependencies]
numpy = ">=1.18"
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = ">=6"
