[package]
name = "doe"
version = "0.1.0"
authors = ["relf <remi.lafage@onera.fr>"]
edition = "2018"

[lib]
name = "doe"

[dependencies]
ndarray = { version = "0.13.1", features = ["rayon", "approx"]}
ndarray-stats = "0.3"
ndarray-rand = "0.11"
rand_isaac = "0.2"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.3"
serde_json = "1"
approx = "0.3"

[[bench]]
name = "lhs" 
harness = false