[package]
name = "egobox-doe"
version = "0.11.0"
authors = ["Rémi Lafage <remi.lafage@onera.fr>"]
edition = "2021"
description = "A library for design of experiments"
license = "Apache-2.0"
repository = "https://github.com/relf/egobox"
keywords = [
    "machine-learning",
    "design",
    "experiments",
    "lhs",
    "full-factorial",
]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []

serializable = ["serde", "rand_xoshiro/serde1"]

[dependencies]
linfa = { version = "0.6.1", default-features = false }
ndarray = { version = "0.15", features = ["rayon", "approx"] }
ndarray-stats = "0.5"
ndarray-rand = "0.14"
rand_xoshiro = "0.6"
num-traits = "0.2"
serde = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.4.0"
serde_json = "1"
approx = "0.4"

[[bench]]
name = "lhs"
harness = false
