[package]
name = "egobox-ego"
version = "0.4.0"
authors = ["Rémi Lafage <remi.lafage@onera.fr>"]
edition = "2018"
description = "A library for efficient global optimization"
license = "Apache-2.0"
repository = "https://github.com/relf/egobox"
keywords = ["machine-learning", "bayesian", "optimization"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []

persistent = ["serde", "typetag", "egobox-moe/persistent", "serde_json"]
blas = ["ndarray-linalg", "linfa/ndarray-linalg", "linfa-pls/blas"]

[dependencies]
egobox-doe = { version = "0.4.0", path="../doe" }
egobox-gp = { version = "0.4.0", path="../gp" }
egobox-moe = { version = "0.4.0", path="../moe" }

linfa = { version = "0.6.0", default-features = false }
linfa-pls = { version = "0.6.0", default-features = false }
linfa-linalg = { version = "0.1", default-features = false }

ndarray = { version = "0.15", features = ["rayon", "approx"]}
ndarray-linalg = { version = "0.14", optional = true }
ndarray-stats = "0.5"
ndarray-rand = "0.14"
ndarray-npy = "0.8"

nlopt = "0.5.3"
rand_isaac = "0.3"
libm = "0.2"
finitediff = { version="0.1", features = ["ndarray"] }
# sort-axis
rawpointer = { version = "0.2" }
log = "0.4"
env_logger = "0.9"
thiserror = "1"

serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
typetag = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.3"
serde_json = "1"
approx = "0.4"
argmin_testfunctions = "0.1"
serial_test = "0.6.0"
