[package]
name = "egobox-moe"
version = "0.2.0"
authors = ["relf <remi.lafage@onera.fr>"]
edition = "2018"

[dependencies]
egobox-doe = { path = "../egobox-doe" }
egobox-gp = { path = "../egobox-gp" }

linfa = { git="https://github.com/relf/linfa.git", default-features = false }
linfa-clustering = { git="https://github.com/relf/linfa.git", default-features = false }
linfa-pls = { git="https://github.com/relf/linfa.git", default-features = false }

ndarray = { version = "0.15", features = ["rayon", "approx", "blas"]}
ndarray-linalg = "0.14"
ndarray-stats = "0.5"
ndarray-rand = "0.14"
ndarray-npy = "0.8"
rand_isaac = "0.3"
paste = "1.0"
bitflags = "1.3"
log = "0.4"
env_logger = "0.9"
thiserror = "1"
serde = "1"
serde_json = "1.0.73"

[dev-dependencies]
criterion = "0.3"
serde_json = "1"
approx = "0.4"
ndarray-npy = "0.8"
ndarray-csv = "0.5"
csv = "1.1"