[package]
name = "gaussian_process"
version = "0.1.0"
authors = ["relf <remi.lafage@onera.fr>"]
edition = "2018"

[lib]
name = "gaussian_process"

[dependencies]
doe = { path="doe" }
ndarray = { version = "0.13.1", features = ["rayon", "approx"]}
ndarray-linalg = "0.12"
intel-mkl-src = { version = "0.5", default-features = false }
ndarray-stats = "0.3"

[dev-dependencies]
criterion = "0.3"
serde_json = "1"
approx = "0.3"


