[package]
name = "egobox-gp"
version = "0.11.0"
authors = ["Rémi Lafage <remi.lafage@onera.fr>"]
edition = "2021"
description = "A library for gaussian process modeling"
license = "Apache-2.0"
repository = "https://github.com/relf/egobox"
keywords = ["machine-learning", "gaussian-process", "kriging", "surrogate"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []

serializable = ["serde", "linfa/serde"]
blas = ["ndarray-linalg", "linfa/ndarray-linalg", "linfa-pls/blas"]

[dependencies]
egobox-doe = { version = "0.11.0", path = "../doe" }

linfa = { version = "0.6.1", default-features = false }
linfa-pls = { version = "0.6.1", default-features = false }
linfa-linalg = { version = "0.1", default-features = false }

ndarray = { version = "0.15", features = ["rayon", "approx"] }
ndarray-linalg = { version = "0.15", optional = true }
ndarray-stats = "0.5"
ndarray_einsum_beta = "0.7"
ndarray-rand = "0.14"
ndarray-npy = "0.8"
nlopt = "0.6.0"
rand_xoshiro = "0.6"
paste = "1.0"
num-traits = "0.2"
thiserror = "1"
log = "0.4"

[dependencies.serde]
package = "serde"
version = "1.0"
default-features = false
features = ["std", "derive"]
optional = true

[dev-dependencies]
criterion = "0.4.0"
serde_json = "1"
approx = "0.4"
argmin_testfunctions = "0.1"

[[bench]]
name = "gp"
harness = false
