[package]
name = "egobox-moe"
version = "0.2.1"
authors = ["Rémi Lafage <remi.lafage@onera.fr>"]
edition = "2018"
description = "A library for mixture of expert gaussian processes"
license = "Apache-2.0"
repository = "https://github.com/relf/egobox"
keywords = ["machine-learning", "mixture", "clustering", "surrogate", "gaussian-process"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []

persistent = ["serde", "typetag", "egobox-gp/serializable", "serde_json"]

[dependencies]
egobox-doe = { version = "0.2.1", path = "../doe" }
egobox-gp = { version = "0.2.1", path = "../gp" }

linfa = { version = "0.5.1", default-features = false }
linfa-clustering = { version = "0.5.1", default-features = false }
linfa-pls = { version = "0.5.1", default-features = false }

ndarray = { version = "0.15", features = ["rayon", "approx", "blas"]}
ndarray-linalg = "0.14"
ndarray-stats = "0.5"
ndarray-rand = "0.14"
ndarray-npy = "0.8"
rand_isaac = "0.3"
paste = "1.0"
bitflags = "1.3"
log = "0.4"
env_logger = "0.9"
thiserror = "1"

serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
typetag = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.3"
approx = "0.4"
ndarray-npy = "0.8"
ndarray-csv = "0.5"
csv = "1.1"