[package]
name = "egobox-moe"
version = "0.13.0"
authors = ["Rémi Lafage <remi.lafage@onera.fr>"]
edition = "2021"
description = "A library for mixture of expert gaussian processes"
license = "Apache-2.0"
repository = "https://github.com/relf/egobox"
keywords = [
    "machine-learning",
    "mixture",
    "clustering",
    "surrogate",
    "gaussian-process",
]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []

persistent = ["serializable", "serde_json"]
serializable = [
    "serde",
    "typetag",
    "bitflags/serde",
    "linfa-clustering/serde",
    "egobox-gp/serializable",
]
blas = ["ndarray-linalg", "linfa/ndarray-linalg", "linfa-pls/blas"]

[dependencies]
egobox-doe = { version = "0.13.0", path = "../doe" }
egobox-gp = { version = "0.13.0", path = "../gp" }

linfa = { version = "0.7", default-features = false }
linfa-clustering = { version = "0.7", default-features = false }
linfa-pls = { version = "0.7", default-features = false }
linfa-linalg = { version = "0.1", default-features = false }

ndarray = { version = "0.15", features = ["rayon", "approx"] }
ndarray-linalg = { version = "0.15", optional = true }
ndarray-stats = "0.5"
ndarray-rand = "0.14"
ndarray-npy = "0.8"
rand_xoshiro = "0.6"
paste = "1.0"
bitflags = { version = "2.4.1", features = ["serde"] }
log = "0.4"
env_logger = "0.10.0"
thiserror = "1"

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
typetag = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.4.0"
approx = "0.4"
ndarray-npy = "0.8"
ndarray-csv = "0.5"
csv = "1.1"
argmin_testfunctions = "0.1"
rand_isaac = "0.3"

[[bench]]
name = "bench_find_nb_clusters"
harness = false
