[package]
name = "pls"
version = "0.1.0"
authors = ["relf <remi.lafage@onera.fr>"]
edition = "2018"

[lib]
name = "pls"

[dependencies]
linfa = { git="https://github.com/relf/linfa.git", features = ["intel-mkl-static"] }

ndarray = { version = "0.13.1", features = ["rayon", "approx", "blas"]}
ndarray-linalg = "0.12"
ndarray-stats = "0.3"
ndarray-rand = "0.11"
rand_isaac = "0.2"
num-traits = "0.2"

[dev-dependencies]
linfa-datasets = { git="https://github.com/relf/linfa.git", features = ["linnerud"] }
criterion = "0.3"
serde_json = "1"
approx = "0.3"
