[project]
name = "egobox"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]
dynamic = ["version"]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0", "poetry_core>=1.0.0"]

[tool.maturin]
python-source = "./"
# Optional usage of BLAS backend 
# cargo-extra-args = "--features linfa/intel-mkl-static"

[tool.uv]
dev-dependencies = ["pip", "pytest>=8.0.2", "ruff>=0.3.0"]

[tool.uv.workspace]
members = ["egobox"]
