[project]
name = "egobox"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]
requires-python = ">=3.9"
dependencies = ["numpy"]
dynamic = ["version"]
readme = 'README.md'

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0, <2.0"]

[tool.maturin]
module-name = "egobox"
features = ["pyo3/extension-module"]
# Optional usage of BLAS backend 
# cargo-extra-args = "--features linfa/intel-mkl-static"

[tool.uv]
dev-dependencies = [
    "pip",
    "pytest>=8.0.2",
    "ruff>=0.8.0",
    "pre-commit>=4.0.1",
    "nbval>=0.11",         # for notebooks
    "matplotlib>=3.7.1",   # for notebooks
    "scikit-learn>=1.2.2", # for notebooks
    "pandas>=2.0.3",       # for notebooks
]

[tool.ruff]
extend-exclude = ["egobox/egobox.pyi"]
