[package]
name = "egobox-gp"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "A library for gaussian process modeling"
keywords = ["machine-learning", "gaussian-process", "kriging", "surrogate"]
categories = ["algorithms", "mathematics", "science"]

[features]

default = []

serializable = ["serde", "typetag", "linfa/serde", "rand_xoshiro/serde1"]
persistent = ["serializable", "serde_json"]
blas = ["ndarray-linalg", "linfa/ndarray-linalg", "linfa-pls/blas"]

[dependencies]
egobox-doe = { version = "0.34.0", path = "../doe" }

linfa.workspace = true
linfa-linalg.workspace = true
linfa-pls = { version = "0.8", default-features = false }

ndarray.workspace = true
ndarray-stats.workspace = true
ndarray-rand.workspace = true

num-traits.workspace = true

rand_xoshiro.workspace = true
thiserror.workspace = true
log.workspace = true
rayon.workspace = true

ndarray-linalg = { version = "0.17", optional = true }
ndarray-einsum = "0.8"

ndarray-npy.workspace = true
nlopt = { version = "0.8", optional = true }
cobyla = { version = "0.8" }
paste = "1.0"

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
typetag = { version = "0.2", optional = true }

finitediff.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
approx.workspace = true
argmin_testfunctions.workspace = true

[[bench]]
name = "gp"
harness = false

[[bench]]
name = "corr"
harness = false
