[package]
name = "gpqa"
readme = "README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Utility to assess Egor GPs quality saved using GP recorder"
keywords = ["machine-learning", "bayesian", "optimization"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
egobox-ego = { version = "0.32", path = "../ego" }
egobox-moe = { version = "0.32", path = "../moe" }
anyhow.workspace = true
clap.workspace = true
bincode.workspace = true
rayon.workspace = true

[[bin]]
name = "gpqa"
