[package]
name = "gpqa"
version = "0.2.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Utility to assess Egor GPs quality saved using GP recorder"
keywords = ["machine-learning", "bayesian", "optimization"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
egobox-ego = { version = "0.34", path = "../ego" }
egobox-moe = { version = "0.34", path = "../moe" }
anyhow.workspace = true
clap.workspace = true
bincode.workspace = true
rayon.workspace = true

[[bin]]
name = "gpqa"
