[package]
name = "egobox-moe"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
description = "A library for mixture of expert gaussian processes"
repository = "https://github.com/relf/egobox/crates/moe"
keywords = [
    "machine-learning",
    "mixture",
    "clustering",
    "surrogate",
    "gaussian-process",
]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []

persistent = ["serializable", "serde_json", "bincode"]
serializable = [
    "serde",
    "typetag",
    "bitflags/serde",
    "linfa-clustering/serde",
    "egobox-gp/serializable",
]
blas = ["ndarray-linalg", "linfa/ndarray-linalg", "linfa-pls/blas"]

[dependencies]
egobox-doe = { version = "0.29.1", path = "../doe" }
egobox-gp = { version = "0.29.1", path = "../gp" }

linfa.workspace = true
linfa-clustering = { version = "0.7", default-features = false }
linfa-pls = { version = "0.7", default-features = false }
linfa-linalg = { version = "0.1", default-features = false }

ndarray.workspace = true
ndarray-linalg = { version = "0.16", optional = true }
ndarray-stats.workspace = true
ndarray-rand.workspace = true
ndarray-npy.workspace = true
rand_xoshiro.workspace = true
paste = "1.0"
bitflags = { version = "2.4.1", features = ["serde"] }
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
bincode = { version = "1.3.3", optional = true }

typetag = { version = "0.2", optional = true }

[dev-dependencies]
criterion.workspace = true
approx.workspace = true
ndarray-npy.workspace = true
ndarray-csv = "0.5"
csv = "1.1"
argmin_testfunctions.workspace = true

[[bench]]
name = "bench_find_nb_clusters"
harness = false
